210418_오버사이징화면처리
사이즈 벗어난 화면 처리하고 싶을때
스마트폰 가로,세로 화면 전환 작업처리 필요시 관련기능 구현완료

--- a/C07/130/style.css
+++ b/C07/130/style.css
@@ -1,7 +1,7 @@
-@import url(../../common/css/base_photo.css);
+@import url(../common/css/base_photo.css);
 body {
   background-size: cover;
-  background: url("../common/bg_sky.jpg") center;
+  background: url("../common/images/bg_nature.jpg") center;
 }
 
 main {
